test/expected/explain_rftsrk_v.out
explain void f( this S &self ) &
                       ^
24: error: function with "this" parameter can not be "reference"
